# tauraro

./: .gitattributes  .gitignore  00_basic.rs  01_lists.rs  ARCHITECTURE.md  BAREMETAL_FEATURES_VERIFIED.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_OOP.md  BOOTSTRAP.md  BUG_INVESTIGATION_REPORT.md  BUILTIN_FUNCTIONS_SUPPORT.md  BUILTIN_MODULES_COMPLETE.md  BUILTIN_MODULES_STATUS.md  BUILTIN_MODULES_VERIFICATION.md  BUILTIN_MODULE_APPROACHES.md  BYTECODE_VM_FIXES_SUMMARY.md  CHANGELOG.md  CHANGELOG_MULTI_WINDOW.md  COLLECTION_TYPES_SUPPORT.md  COMMIT_SUMMARY.md  COMPARISON_OPTIMIZATION_REPORT.md  COMPILATION_FIXES_SUMMARY.md  COMPLETE_FEATURE_DEMO.py  COMPLETE_OPTIMIZATION_GUIDE.md  COMPLETE_OPTIMIZATION_REPORT.md  COMPLETE_SUCCESS_SUMMARY.md  COMPREHENSIVE_BUTTON_TEST.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  COMPREHENSIVE_PYTHON_PARITY_REPORT.md  CORE_BUG_FIX_REPORT.md  CPYTHON_INTEGRATION.md  CRITICAL_BUGS_FIXED.md  C_BACKEND_EXAMPLES_REPORT.md  C_BACKEND_TESTING_STATUS.md  C_COMPILATION_TEST_RESULTS.md  C_IMPORT_SYSTEM_SUMMARY.md  C_TRANSPILER_FEATURE_ANALYSIS.md  C_TRANSPILER_FIXES.md  C_TRANSPILER_FIX_REPORT.md  C_TRANSPILER_GAP_ANALYSIS.md  (+968 more)
.cargo/: config.toml
.claude/: settings.local.json
.trae/: extensions.json  languages.json  settings.json  tauraro-theme.json
advanced_lib/: Cargo.toml
benchmarks/: 01_arithmetic.py  01_arithmetic.tr  01_fibonacci.py  02_loops.py  02_loops.tr  02_prime_sieve.py  03_functions.py  03_functions.tr  03_matrix_multiply.py  04_lists.py  04_lists.tr  04_string_ops.py  05_hash_operations.py  05_strings.py  05_strings.tr  06_sorting.py  07_file_io.py  08_json_parsing.py  09_memory_allocation.py  10_regex.py  BENCHMARK_CONFLICTS.md  ERROR_TEST_RESULTS.md  EXCEPTION_FIX_ACTION_PLAN.md  OPTIMIZATION_RESULTS.py  README.md  TAURARO_VS_PYTHON_BENCHMARK_REPORT.md  bench_arithmetic.py  bench_arithmetic.tr  bench_bitwise.py  bench_bitwise.tr  bench_conditionals.py  bench_conditionals.tr  bench_data_structures.py  bench_function_calls.py  bench_function_calls.tr  bench_functions.py  bench_loop.py  bench_loop.tr  bench_loops.py  bench_nested_loops.py  (+77 more)
benchmarks_simple/: 01_fibonacci_simple.py  02_loop_arithmetic.py  03_list_operations.py  04_nested_loops.py  run_simple.py
docs/: CDN_MANAGEMENT_GUIDE.md  COMPLETE_JIT_IMPLEMENTATION.md  COMPONENT_BASED_PHILOSOPHY.md  CUSTOM_TITLEBAR_FIXES.md  CUSTOM_TITLEBAR_LIMITATIONS.md  C_TRANSPILER_NATIVE_TYPES.md  ELECTRONJS_STYLE_FEATURES.md  FLUTTER_WIDGETS_COMPLETE.md  JIT_COMPLETE_IMPLEMENTATION_SUMMARY.md  JIT_RUNTIME_HELPERS_REFERENCE.md  MEMORY_MANAGEMENT.md  OPTIMIZATION_JOURNEY.md  PARENTHESIS_IMPORTS.md  PERFORMANCE_ACTION_PLAN.md  PERFORMANCE_LESSONS_LEARNED.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE_3_INCREMENTAL.md  PHASE_3_PLAN.md  PHASE_3_REALITY_CHECK.md  PHASE_3_SUMMARY.md  PHASE_4_ARCHITECTURE_DIAGRAM.md  PHASE_4_INTEGRATION_PLAN.md  PHASE_5_VM_INTEGRATION_DESIGN.md  README.md  RELEASE_NOTES_v0.2.0.md  REPL_FEATURE_PARITY_REPORT.md  RESPONSIVE_DESIGN.md  TAURARO_BACKEND_IMPLEMENTATION.md  TITLEBAR_MENU_IMPLEMENTATION.md  TITLEBAR_MENU_LIMITATIONS.md  TITLEBAR_MENU_SUMMARY.md  TRIPLE_QUOTE_STRINGS.md  WEBVIEWTK_COMPONENT_SYSTEM.md  WEBVIEWTK_EVENT_HANDLER_FIX.md  WEBVIEWTK_GUIDE.md  WEBVIEWTK_MODULAR_CDN_IPC.md  WEBVIEWTK_REBUILD_COMPLETE.md  advanced-features.md  api-reference.md  best-practices.md  (+15 more)
examples/: 01_modern_todo_app.tr  01_variables.tr  02_music_player_ui.tr  02_operators.tr  03_code_editor_ui.tr  03_control_flow.tr  04_chat_app_ui.tr  04_functions.tr  05_dashboard_app.tr  05_strings.tr  06_classes.tr  06_collections.tr  06_settings_app.tr  07_classes.tr  07_enums.tr  08_pattern_matching.tr  09_interfaces.tr  10_error_handling.tr  10_generics.tr  11_closures.tr  12_collections.tr  13_ownership_pointers.tr  14_system_programming.tr  15_concurrency.tr  15_dynamic_linking.tr  15_std_core_vec.tr  16_extern_and_ffi.tr  16_win32_window.tr  17_interfaces.tr  18_error_handling.tr  19_async_spawn.tr  19_generic_interfaces.tr  20_shared_unsafe.tr  21_error_propagation.tr  22_spawn_detached.tr  23_asm_bare_metal.tr  25_data_race_prevention.tr  25_new_features.tr  26_safety_model.tr  27_safety_phases.tr  (+194 more)
examples_builtin_modules/: 01_math_module.tau  02_time_module.tau  03_random_module.tau  04_json_module.tau  05_os_module.tau  06_string_module.tau  07_base64_module.tau  08_regex_module.tau  09_collections_module.tau  10_hashlib_module.tau  11_sys_module.tau  12_uuid_module.tau  13_itertools_module.tau  14_exceptions_module.tau  15_logging_module.tau  16_multi_module_complex.tau
g3/: .build_flags
mypackage/: __init__.py
results/: benchmark_results.json
runtime/: native_abi.c  native_leak_probe.c  tauraro_rt.h  tauraro_types.h
rust_backend_tests/: test_01_basics.tau  test_02_control_flow.tau  test_03_functions.tau  test_04_classes.tau  test_05_exceptions.tau  test_simple_native.tau
scripts/: bare_run.sh  bare_run_riscv.sh  build.ps1  build.sh  build_runtime_o.sh  cross_check.sh  fuzz_check.sh  leak_check.sh  llvm_diff.sh  llvm_ffi.sh  llvm_run.sh  merge-benchmarks.sh  native_diff.sh  native_leak_check.sh  native_run.sh  obj_asan.sh  obj_leak.sh  reactor_stress.sh  regen-bootstrap.ps1  regen-bootstrap.sh  resolve-benchmark-conflicts.ps1  resolve-benchmark-conflicts.sh  run_concurrency.sh  run_soundness.ps1  run_soundness.sh  run_tests.ps1  run_tests.sh  security_test.sh
src/: ast.rs  ast.tr  base_object.rs  builtins.rs  builtins_super.rs  bytecode.rs  diag.tr  ffi.rs  ffi_builtins.rs  fmt.tr  hir.tr  ir.rs  lexer.rs  lexer.tr  lib.rs  macros.tr  main.rs  main.tr  metaclass.rs  mir.tr  module_cache.rs  module_system.rs  modules.rs  object_system.rs  package_manager.rs  parser.rs  parser.tr  python_interop.rs  resolver.tr  runtime.rs  runtime_error.rs  sema.tr  semantic.rs  string_interner.rs  tagged_value.rs  test.rs  test_builtin_list.py  test_builtin_list.rs  test_debug.rs  test_hplist.rs  (+9 more)
tauraro_examples/: Cargo.toml
tauraro_packages/: README.md  os.tr  sys.tr  utils_lib.c  win_gui.c
tauraroc-Linux-ARM64/: tauraroc
tauraroc-Linux-X64/: tauraroc
tests/: arc_classes.tr  (+46 more)
(+962 files in other folders)
