[package]
name = "tauraro"
version = "0.0.1"
edition = "2021"
description = "Tauraro Programming Language - A modern, high-performance programming language with 100% Python syntax compatibility and multilingual support"
license = "MIT OR Apache-2.0"
authors = ["TauraroLang Team"]
repository = "https://github.com/Yusee-Programmer/tauraro"

[dependencies]
logos = "0.14"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = "2.0"
unicode-segmentation = "1.10"
smallvec = "1.13"
colored = "2.0"
atty = "0.2"

# Optional backends
llvm-sys = { version = "170.0", optional = true }
inkwell = { version = "0.4", optional = true }
wasmer = { version = "4.2", optional = true }
object = { version = "0.32", optional = true }
cranelift = { version = "0.119", optional = true }
cranelift-codegen = { version = "0.119", optional = true }
cranelift-frontend = { version = "0.119", optional = true }
cranelift-jit = { version = "0.119", optional = true }
cranelift-module = { version = "0.119", optional = true }

# For C code generation and FFI
tempfile = "3.8"
libffi = { version = "3.2", optional = true }
libloading = { version = "0.8", optional = true }
winapi = { version = "0.3", features = ["libloaderapi", "winuser"], optional = true }
bincode = "1.3"
cc = "1.0"

# Python interop
pyo3 = { version = "0.20", features = ["auto-initialize", "macros"], optional = true }

# Async runtime (always compiled for modules)
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"  # Lock-free data structures for async runtime
num_cpus = "1.16"  # Detect CPU count for worker threads
once_cell = "1.19"  # Lazy static initialization for async runtime
chrono = { version = "0.4.42", features = ["serde"] }
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
lazy_static = "1.4"
rand = "0.8.5"

# Regular expressions
regex = "1.10"

# URL parsing
url = "2.4"

# System library for Unix systems
libc = "0.2"

# Hostname for socket module
hostname = "0.3"

# HTTP and WebSocket libraries (always compiled)
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"
http = "1.0"
httparse = "1.8"
futures = "0.3"

# Cryptographic hashing
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
md5 = { package = "md-5", version = "0.10" }

# Database ORM
rusqlite = { version = "0.31", features = ["bundled"] }

# WebViewTK - Cross-platform GUI framework
wry = { version = "0.24", optional = true }
tao = { version = "0.16", optional = true }

[features]
default = ["interpreter", "clang", "ffi", "async", "http", "webviewtk"]
interpreter = []  # VM-based execution
llvm = ["dep:llvm-sys", "dep:inkwell"]  # LLVM backend
wasm = ["dep:wasmer", "dep:object"]  # WebAssembly backend
c-backend = []  # C code generation backend
clang = []  # Clang backend for native compilation
gcc = []  # GCC backend for native compilation
ffi = ["dep:libffi", "dep:libloading", "dep:winapi"]  # Foreign Function Interface
python-interop = ["dep:pyo3"]  # Python interoperability
async = []  # Async/await support (now always available)
http = []  # HTTP and WebSocket support (now always available)
jit = ["dep:cranelift", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module"]  # JIT compilation with Cranelift
test-llvm = []  # Feature for testing LLVM backend
type_checking = []  # Runtime type checking support
webviewtk = ["dep:wry", "dep:tao", "dep:winapi"]  # Cross-platform GUI framework using HTML/CSS/JS

[dev-dependencies]
pretty_assertions = "1.4"

[profile.dev]
# Increase stack size to 8MB to handle deep recursion and large frames
# Windows default is 1MB which is too small for our VM
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"  # Thin LTO for good optimization without JIT symbol conflicts
codegen-units = 1  # Better optimization at cost of compile time
panic = "abort"  # Smaller binaries, faster code
strip = false  # Keep symbols for profiling
overflow-checks = false  # Disable overflow checks in release mode

[lib]
name = "tauraro"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "tauraro"
path = "src/main.rs"
